[tool.poetry]
name = "pymongo_transactions"
version = "0.1.0"
description = ""
authors = ["Cere Blanco <743526+cereblanco@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"


[tool.poetry.scripts]
sample_transaction = "pymongo_transactions.main:sample_transaction"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
